--- a/projects/020.Nexter/package.json
+++ b/projects/020.Nexter/package.json
@@ -1,7 +1,7 @@
 {
     "name": "natours",
     "version": "1.0.0",
-    "description": "landing page for natours",
+    "description": "landing page for Nexter",
     "main": "index.js",
     "scripts": {
         "compile:sass": "node-sass sass/main.scss css/style.css -w"
