--- a/29-twitter/backend/package.json
+++ b/29-twitter/backend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "monk": "^7.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
