--- a/29-twitter/backend/package.json
+++ b/29-twitter/backend/package.json
@@ -10,9 +10,11 @@
   "author": "Muhiddin",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "monk": "^7.3.1"
   },
   "devDependencies": {
